swiper styles overlapping fixed

--- a/src/app/@shell/ui/not-found/not-found.page.scss
+++ b/src/app/@shell/ui/not-found/not-found.page.scss
@@ -99,30 +99,30 @@
   // height: 30%;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  height: 212px !important;
-  width: 212px !important;
-  border-radius: 100%;
-  background: transparent radial-gradient(closest-side at 50% 50%, #11143F 0%, #130633 100%) 0% 0% no-repeat padding-box;
-  box-shadow: 0px 15px 40px #329AF540;
+// .swiper-slide {
+//   text-align: center;
+//   font-size: 18px;
+//   height: 212px !important;
+//   width: 212px !important;
+//   border-radius: 100%;
+//   background: transparent radial-gradient(closest-side at 50% 50%, #11143F 0%, #130633 100%) 0% 0% no-repeat padding-box;
+//   box-shadow: 0px 15px 40px #329AF540;
 
 
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
+//   /* Center slide text vertically */
+//   display: -webkit-box;
+//   display: -ms-flexbox;
+//   display: -webkit-flex;
+//   display: flex;
+//   -webkit-box-pack: center;
+//   -ms-flex-pack: center;
+//   -webkit-justify-content: center;
+//   justify-content: center;
+//   -webkit-box-align: center;
+//   -ms-flex-align: center;
+//   -webkit-align-items: center;
+//   align-items: center;
+// }
 
 .swiper-slide img {
   display: block;
