--- a/src/app/@shell/ui/swiper/swiper.component.scss
+++ b/src/app/@shell/ui/swiper/swiper.component.scss
@@ -1,10 +1,10 @@
 @import "swiper/css";
-@import "swiper/css/scrollbar";
-@import "swiper/css/navigation";
-@import "swiper/css/pagination";
+@import "swiper/css/bundle";
+// @import "swiper/css/navigation";
+// @import "swiper/css/pagination";
 
 .group-img {
-  @apply rounded-full shadow-lg w-14 h-14 lg:w-44 lg:h-44;
+  @apply rounded-full shadow-lg w-14 h-14 lg:w-44 lg:h-44 bg-transparent;
 }
 .swiper-button-next,
 .swiper-button-prev {
@@ -19,3 +19,27 @@
     font-size: 12px !important;
 }
 
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  // height: 212px !important;
+  // width: 212px !important;
+  border-radius: 100%;
+  // background: transparent radial-gradient(closest-side at 50% 50%, #eeeeee 0%, #ffffff 100%) 0% 0% no-repeat padding-box;
+  // box-shadow: 0px 15px 40px #329AF540;
+
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
